welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var nbBiscuit:Int = 0
while(!sortieTrouvee)
{
	do
	{
		avance()
		nbBiscuit = nbBiscuit + 1
 	while (!croisement)	
	}
	if
}

